[gd_scene load_steps=3 format=3 uid="uid://b42v2tqldpx6x"]

[ext_resource type="Script" path="res://scripts/dragable_area.gd" id="1_5aqrp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_22da6"]
size = Vector2(105, 63)

[node name="DragableArea" type="Area2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_5aqrp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_22da6")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
